--- a/main.html
+++ b/main.html
@@ -11,12 +11,15 @@
   <span onclick="closeSidebar()" class="w3-button w3-display-topright w3-large">X</span>
   <br>
   <div class="w3-padding w3-center">
-    <img class="w3-circle" src="Lemon.png" alt="avatar" style="width:75%">
+    <img class="w3-circle" src="syc.png" alt="avatar" style="width:75%">
   </div>
 </div>
 <a class="w3-bar-item w3-button" href="main.html">Classes</a>
 <a class="w3-bar-item w3-button" href="alumni.html">Alumni</a>
+<a class="w3-bar-item w3-button" href="projects.html">Student Projects</a>
+<a class="w3-bar-item w3-button" href="programs.html">Programs</a>
 <a class="w3-bar-item w3-button" href="https://www.indstate.edu/technology/directions">Location</a>
+
 </nav>
 
 <header class="w3-bar w3-card w3-theme">
@@ -28,7 +31,7 @@
 <hr>
 <div class="w3-cell-row">
   <div class="w3-cell" style="width:30%">
-    <img class="w3-circle" src="Lemon.png" style="width:100%">
+    <img class="w3-circle" src="syc.png" style="width:100%">
   </div>
   <div class="w3-cell w3-container">
     <h3>ECT 160</h3>
@@ -38,7 +41,7 @@
 <hr>
 <div class="w3-cell-row">
   <div class="w3-cell" style="width:30%">
-    <img class="w3-circle" src="Lemon.png" style="width:100%">
+    <img class="w3-circle" src="syc.png" style="width:100%">
   </div>
   <div class="w3-cell w3-container">
     <h3>ECT 172</h3>
@@ -48,7 +51,7 @@
 <hr>
 <div class="w3-cell-row">
   <div class="w3-cell" style="width:30%">
-    <img class="w3-circle" src="Lemon.png" style="width:100%">
+    <img class="w3-circle" src="syc.png" style="width:100%">
   </div>
   <div class="w3-cell w3-container">
     <h3>ECT 373</h3>
