--- a/programs.html
+++ b/programs.html
@@ -19,22 +19,23 @@
 <a class="w3-bar-item w3-button" href="projects.html">Student Projects</a>
 <a class="w3-bar-item w3-button" href="programs.html">Programs</a>
 <a class="w3-bar-item w3-button" href="https://www.indstate.edu/technology/directions">Location</a>
+
 </nav>
 
 <header class="w3-bar w3-card w3-theme">
   <button class="w3-bar-item w3-button w3-xxxlarge w3-hover-theme" onclick="openSidebar()">&#9776;</button>
-  <h1 class="w3-bar-item">Alumni</h1>
+  <h1 class="w3-bar-item">Programs</h1>
 </header>
 
 <div class="w3-container">
 <hr>
 <div class="w3-cell-row">
   <div class="w3-cell" style="width:30%">
-    <img class="w3-circle" src="81225.jpg" style="width:100%">
+    <img class="w3-circle" src="syc.png" style="width:100%">
   </div>
   <div class="w3-cell w3-container">
-    <h3> Dr. Jared Wuerzburger</h3>
-    <p>Alumni</p>
+    <h3>Program One</h3>
+    <p>Program Description</p>
   </div>
 </div>  
 <hr>
@@ -43,8 +44,8 @@
     <img class="w3-circle" src="syc.png" style="width:100%">
   </div>
   <div class="w3-cell w3-container">
-    <h3>Special Person 2</h3>
-    <p>Description</p>
+    <h3>Program Two</h3>
+    <p>Program Description</p>
   </div>
 </div>
 <hr>
@@ -53,8 +54,8 @@
     <img class="w3-circle" src="syc.png" style="width:100%">
   </div>
   <div class="w3-cell w3-container">
-    <h3>Special Person 3</h3>
-    <p>Description</p>
+    <h3>Program Three</h3>
+    <p>Program Description</p>
   </div>
 </div>
 <hr>
